# irc2010gw

./: ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  configure.scan  gw.c  libtool
.deps/: stest.Po
autom4te.cache/: output.0  requests  traces.0
